--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Currency_Tracker</string>
+    <string name="currency_api_url">https://api.exchangeratesapi.io/</string>
 </resources>
