Added requests for all rates (EUR) and simple conversion (not secured yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,78 @@
     <string name="tvWelcomeTitle_string">Welcome Fragment</string>
     <string name="btnWelcomeToConversion_string">Convert</string>
     <string name="btnConvert_string">Convert Currency</string>
+    <string name="tvBaseCurrency_string">Base:</string>
+    <string name="tvSymbolCurrency_string">Foreign:</string>
+
+    <string-array name="available_currencies">
+        <item>EUR </item>
+        <item>USD </item>
+        <item>JPY </item>
+        <item>BGN </item>
+        <item>CZK </item>
+        <item>DKK </item>
+        <item>GBP </item>
+        <item>HUF </item>
+        <item>PLN </item>
+        <item>RON </item>
+        <item>SEK </item>
+        <item>CHF </item>
+        <item>ISK </item>
+        <item>NOK </item>
+        <item>HRK </item>
+        <item>RUB </item>
+        <item>TRY </item>
+        <item>AUD </item>
+        <item>BRL </item>
+        <item>CAD </item>
+        <item>CNY </item>
+        <item>HKD </item>
+        <item>IDR </item>
+        <item>ILS </item>
+        <item>INR </item>
+        <item>KRW </item>
+        <item>MXN </item>
+        <item>MYR </item>
+        <item>NZD </item>
+        <item>PHP </item>
+        <item>SGD </item>
+        <item>THB </item>
+        <item>ZAR </item>
+    </string-array>
+
+<!--    <string-array name="available_currencies">-->
+<!--        <item>EUR (Euro)</item>-->
+<!--        <item>USD (US dollar)</item>-->
+<!--        <item>JPY (Japanese yen)</item>-->
+<!--        <item>BGN (Bulgarian lev)</item>-->
+<!--        <item>CZK (Czech koruna)</item>-->
+<!--        <item>DKK (Danish krone)</item>-->
+<!--        <item>GBP (Pound sterling)</item>-->
+<!--        <item>HUF (Hungarian forint)</item>-->
+<!--        <item>PLN (Polish zloty)</item>-->
+<!--        <item>RON (Romanian leu)</item>-->
+<!--        <item>SEK (Swedish krona)</item>-->
+<!--        <item>CHF (Swiss franc)</item>-->
+<!--        <item>ISK (Icelandic krona)</item>-->
+<!--        <item>NOK (Norwegian krone)</item>-->
+<!--        <item>HRK (Croatian kuna)</item>-->
+<!--        <item>RUB (Russian rouble)</item>-->
+<!--        <item>TRY (Turkish lira)</item>-->
+<!--        <item>AUD (Australian dollar)</item>-->
+<!--        <item>BRL (Brazilian real)</item>-->
+<!--        <item>CAD (Canadian dollar)</item>-->
+<!--        <item>CNY (Chinese yuan renminbi)</item>-->
+<!--        <item>HKD (Hong Kong dollar)</item>-->
+<!--        <item>IDR (Indonesian rupiah)</item>-->
+<!--        <item>ILS (Israeli shekel)</item>-->
+<!--        <item>INR (Indian rupee)</item>-->
+<!--        <item>KRW (South Korean won)</item>-->
+<!--        <item>MXN (Mexican peso)</item>-->
+<!--        <item>MYR (Malaysian ringgit)</item>-->
+<!--        <item>NZD (New Zealand dollar)</item>-->
+<!--        <item>PHP (Philippine peso)</item>-->
+<!--        <item>SGD (Singapore dollar)</item>-->
+<!--        <item>THB (Thai baht)</item>-->
+<!--        <item>ZAR (South African rand)</item>-->
+<!--    </string-array>-->
 </resources>
