--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="_1">1</string>
     <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
+    <string name="chartbutton">ChartButton</string>
+    <string name="convertbutton">ConvertButton</string>
+    <string name="base">Base</string>
+    <string name="symbol">symbol</string>
+    <string name="favourite">Favourite</string>
 
     <!--    <string-array name="available_currencies">-->
     <!--        <item>EUR (Euro)</item>-->
