--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
     <string name="animations_by_nariman_zahmatkesh_lottiefiles">Animations by: nariman_zahmatkesh @LottieFiles</string>
     <string name="norbert_janas">Norbert Janas</string>
     <string name="pawe_pi_at">Paweł Piłat</string>
+    <string name="statistics">Statistics</string>
 
     <!--    <string-array name="available_currencies">-->
     <!--        <item>EUR (Euro)</item>-->
